--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 25px;
+    margin-top: 10px;
 }
 
 /* Nagłówek aplikacji */
@@ -105,7 +106,7 @@ body {
 
 /* Box informacyjny */
 .info-card {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .card-header {
@@ -125,38 +126,46 @@ body {
 }
 
 .card-content.show {
-    max-height: 500px;
-    margin-top: 15px;
+    max-height: 600px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .instructions {
     padding-left: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .instructions li {
-    margin-bottom: 8px;
+    margin-bottom: 10px;
+    line-height: 1.7;
 }
 
 .app-features {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 15px;
+    gap: 12px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .feature {
     background-color: rgba(255, 204, 0, 0.1);
-    padding: 8px 12px;
+    padding: 10px 14px;
     border-radius: 20px;
     font-size: 14px;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 8px;
 }
 
 .feature i {
     color: var(--primary-color);
+}
+
+/* Ikona Spotify */
+.fa-spotify:before {
+    content: "\f1bc";
 }
 
 /* Status box */
